Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1405

Kernel panic when running sanityn test_12

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0
    • None
    • None
    • 3
    • 4613

      Lustre: DEBUG MARKER: only running test 12
      Lustre: DEBUG MARKER: excepting tests: 22 14b 19 22 28 29 35
      Lustre: DEBUG MARKER: == sanityn test 12: test lock ordering (link, stat, unlink) ============= 09:12:10 (1332227530)
      Lustre: DEBUG MARKER: start dir: /mnt/lustre/lockdir=144115205255725117 file: /mnt/lustre/lockdir/lockfile=144115205255725115
      LustreError: 2212:0:(osd_handler.c:2314:osd_object_ref_add()) ASSERTION(inode->i_nlink < LDISKFS_LINK_MAX) failed
      LustreError: 2212:0:(osd_handler.c:2314:osd_object_ref_add()) LBUG
      Pid: 2212, comm: mdt_00

      Call Trace:
      [<ffffffffa01f8855>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      [<ffffffffa01f8e95>] lbug_with_loc+0x75/0xe0 [libcfs]
      [<ffffffffa0203db6>] libcfs_assertion_failed+0x66/0x70 [libcfs]
      [<ffffffffa0797f6a>] osd_object_ref_add+0x13a/0x190 [osd_ldiskfs]
      [<ffffffffa06d9ca5>] mdo_ref_add+0xb5/0xc0 [mdd]
      [<ffffffffa06df326>] mdd_link+0xa06/0xf30 [mdd]
      [<ffffffffa06ddf16>] ? mdd_lookup+0x56/0x120 [mdd]
      [<ffffffffa077d056>] cml_link+0xb6/0x260 [cmm]
      [<ffffffffa044e2f4>] ? lustre_msg_get_versions+0x94/0x100 [ptlrpc]
      [<ffffffffa0729520>] mdt_reint_link+0x760/0xc10 [mdt]
      [<ffffffffa07241af>] ? mdt_link_unpack+0x3ef/0x5f0 [mdt]
      [<ffffffffa06e7d06>] ? md_ucred+0x26/0x60 [mdd]
      [<ffffffffa0725a9f>] mdt_reint_rec+0x3f/0x100 [mdt]
      [<ffffffffa044d544>] ? lustre_msg_get_flags+0x34/0xa0 [ptlrpc]
      [<ffffffffa071dde4>] mdt_reint_internal+0x6d4/0x9f0 [mdt]
      [<ffffffffa0713806>] ? mdt_reint_opcode+0x96/0x160 [mdt]
      [<ffffffffa071e14c>] mdt_reint+0x4c/0x120 [mdt]
      [<ffffffffa044d018>] ? lustre_msg_check_version+0xc8/0xe0 [ptlrpc]
      [<ffffffffa0710ee5>] mdt_handle_common+0x8d5/0x1810 [mdt]
      [<ffffffffa044aca4>] ? lustre_msg_get_opc+0x94/0x100 [ptlrpc]
      [<ffffffffa0711ef5>] mdt_regular_handle+0x15/0x20 [mdt]
      [<ffffffffa045a571>] ptlrpc_server_handle_request+0x3f1/0xed0 [ptlrpc]
      [<ffffffffa0205843>] ? lc_watchdog_touch+0x73/0x140 [libcfs]
      [<ffffffff8105e842>] ? default_wake_function+0x12/0x20
      [<ffffffffa0453602>] ? ptlrpc_wait_event+0xb2/0x2c0 [ptlrpc]
      [<ffffffff81051a03>] ? __wake_up+0x53/0x70
      [<ffffffffa045b857>] ptlrpc_main+0x807/0x1800 [ptlrpc]
      [<ffffffffa045b050>] ? ptlrpc_main+0x0/0x1800 [ptlrpc]
      [<ffffffff8100c14a>] child_rip+0xa/0x20
      [<ffffffffa045b050>] ? ptlrpc_main+0x0/0x1800 [ptlrpc]
      [<ffffffffa045b050>] ? ptlrpc_main+0x0/0x1800 [ptlrpc]
      [<ffffffff8100c140>] ? child_rip+0x0/0x20

      Kernel panic - not syncing: LBUG
      Pid: 2212, comm: mdt_00 Not tainted 2.6.32-220.4.2.el6_lustrexyratex #1
      Call Trace:
      [<ffffffff814ed144>] ? panic+0x78/0x143
      [<ffffffffa01f8eeb>] ? lbug_with_loc+0xcb/0xe0 [libcfs]
      [<ffffffffa0203db6>] ? libcfs_assertion_failed+0x66/0x70 [libcfs]
      [<ffffffffa0797f6a>] ? osd_object_ref_add+0x13a/0x190 [osd_ldiskfs]
      [<ffffffffa06d9ca5>] ? mdo_ref_add+0xb5/0xc0 [mdd]
      [<ffffffffa06df326>] ? mdd_link+0xa06/0xf30 [mdd]
      [<ffffffffa06ddf16>] ? mdd_lookup+0x56/0x120 [mdd]
      [<ffffffffa077d056>] ? cml_link+0xb6/0x260 [cmm]
      [<ffffffffa044e2f4>] ? lustre_msg_get_versions+0x94/0x100 [ptlrpc]
      [<ffffffffa0729520>] ? mdt_reint_link+0x760/0xc10 [mdt]
      [<ffffffffa07241af>] ? mdt_link_unpack+0x3ef/0x5f0 [mdt]
      [<ffffffffa06e7d06>] ? md_ucred+0x26/0x60 [mdd]
      [<ffffffffa0725a9f>] ? mdt_reint_rec+0x3f/0x100 [mdt]
      [<ffffffffa044d544>] ? lustre_msg_get_flags+0x34/0xa0 [ptlrpc]
      [<ffffffffa071dde4>] ? mdt_reint_internal+0x6d4/0x9f0 [mdt]
      [<ffffffffa0713806>] ? mdt_reint_opcode+0x96/0x160 [mdt]
      [<ffffffffa071e14c>] ? mdt_reint+0x4c/0x120 [mdt]
      [<ffffffffa044d018>] ? lustre_msg_check_version+0xc8/0xe0 [ptlrpc]
      [<ffffffffa0710ee5>] ? mdt_handle_common+0x8d5/0x1810 [mdt]
      [<ffffffffa044aca4>] ? lustre_msg_get_opc+0x94/0x100 [ptlrpc]
      [<ffffffffa0711ef5>] ? mdt_regular_handle+0x15/0x20 [mdt]
      [<ffffffffa045a571>] ? ptlrpc_server_handle_request+0x3f1/0xed0 [ptlrpc]
      [<ffffffffa0205843>] ? lc_watchdog_touch+0x73/0x140 [libcfs]
      [<ffffffff8105e842>] ? default_wake_function+0x12/0x20
      [<ffffffffa0453602>] ? ptlrpc_wait_event+0xb2/0x2c0 [ptlrpc]
      [<ffffffff81051a03>] ? __wake_up+0x53/0x70
      [<ffffffffa045b857>] ? ptlrpc_main+0x807/0x1800 [ptlrpc]
      [<ffffffffa045b050>] ? ptlrpc_main+0x0/0x1800 [ptlrpc]
      [<ffffffff8100c14a>] ? child_rip+0xa/0x20
      [<ffffffffa045b050>] ? ptlrpc_main+0x0/0x1800 [ptlrpc]
      [<ffffffffa045b050>] ? ptlrpc_main+0x0/0x1800 [ptlrpc]
      [<ffffffff8100c140>] ? child_rip+0x0/0x20

      Fix LASSERT changed in LU-993. i_nlink can be equal to ddp_max_nlink (LDISKFS_LINK_MAX) for regular files.

            wc-triage WC Triage
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: