LU-1405 osd: Kernel panic when running sanityn test_12

Fix LASSERT changed in LU-993. i_nlink can be equal to ddp_max_nlink
(LDISKFS_LINK_MAX) for regular files.

Xyratex-bug-id: MRP-468
Reviewed-by: Alexander Boyko <alexander_boyko@xyratex.com>
Reviewed-by: Vitaly Fertman <vitaly_fertman@xyratex.com>
Signed-off-by: Andriy Skulysh <Andriy_Skulysh@xyratex.com>
Change-Id: I4b0fd5171d39a82ce622cdf93ab160a3526e3d8f
Reviewed-on: http://review.whamcloud.com/2787
Tested-by: Hudson
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Bobi Jam <bobijam@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>